Fix select role text align

--- a/apps/supply-chain/src/pages/role/Role.module.scss
+++ b/apps/supply-chain/src/pages/role/Role.module.scss
@@ -26,21 +26,12 @@
   @extend %box;
   padding: 0;
   display: flex;
+  align-items: center;
 }
 
-.listWrapper {
+.text {
   flex: 1;
-  display: flex;
-}
-
-.textWrapper {
-  flex: 1;
-  position: relative;
   text-align: center;
-
-  .text {
-    @extend %absoluteCenter;
-  }
 }
 
 .heading {
