--- a/apps/supply-chain/src/pages/role/list/List.module.scss
+++ b/apps/supply-chain/src/pages/role/list/List.module.scss
@@ -7,8 +7,8 @@
 }
 
 .list {
-  flex: 1;
-  max-width: 280px;
+  display: inline-block;
+  min-width: 280px;
   min-height: 450px;
   background-color: #1e1e1e;
   border-right: 1px solid #3d3d3d;
